js262/test/language/expressions/async-generator/early-errors-expression-formals-contains-await-expr.js


/*---
author: Caitlin Potter <caitp@igalia.com>
esid: sec-async-generator-function-definitions-static-semantics-early-errors
description: >
  It is a Syntax Error if FormalParameters Contains AwaitExpression is true.
negative:
  phase: parse
  type: SyntaxError
features: [async-iteration]
---*/

$DONOTEVALUATE();

(async function*(x = await 1) { });
